--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "Connection": "Data Source=MSI;Initial Catalog=SachThayHuynh;Integrated Security=True"
+  },
+  "Jwt": {
+    "Key": "a2V5Q2FucmVwbGFjZVVzaW5nQXQzMkNoYXJzQVNDSUk=",
+    "Issuer": "https://localhost:7261",
+    "Audience": "khoadev"
   }
 }
